--- a/package.json
+++ b/package.json
@@ -3,9 +3,25 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.4.0",
+    "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
+    "node-sass": "^4.14.1",
+    "prop-types": "^15.7.2",
     "react": "17.0.0",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "17.0.0",
-    "react-scripts": "3.4.3"
+    "react-icons": "^3.11.0",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "react-test-renderer": "^16.12.0",
+    "react-toastify": "^6.0.9",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "typescript": "3.8.3"
